<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:id="@+id/txt_tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_tempo"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/togglebtn_REC" />

    <Button
        android:id="@+id/btn_son1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_son1"
        app:layout_constraintRight_toLeftOf="@+id/btn_son2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/txt_sons"
        app:layout_constraintLeft_toLeftOf="@+id/txt_sons" />

    <Button
        android:id="@+id/btn_son2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_son2"
        app:layout_constraintRight_toLeftOf="@+id/btn_son3"
        app:layout_constraintLeft_toRightOf="@+id/btn_son1"
        app:layout_constraintBottom_toBottomOf="@+id/btn_son1" />

    <Button
        android:id="@+id/btn_son3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_son3"
        app:layout_constraintLeft_toRightOf="@+id/btn_son2"
        app:layout_constraintBottom_toBottomOf="@+id/btn_son2"
        app:layout_constraintRight_toRightOf="@+id/btn_plus5" />

    <TextView
        android:id="@+id/txt_sons"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/str_sons"
        app:layout_constraintLeft_toLeftOf="@+id/btn_less5"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_less5" />

    <SeekBar
        android:id="@+id/seekBar_tempo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:max="1000"
        android:progress="600"
        app:layout_constraintLeft_toLeftOf="@+id/txt_tempo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tempo"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="7dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/txt_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/str_control"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/btn_adsr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADSR"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_son1"
        app:layout_constraintLeft_toLeftOf="@+id/btn_son1" />

    <TextView
        android:id="@+id/txt_bpm_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="bpm"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_tempo"
        app:layout_constraintLeft_toRightOf="@+id/txt_tempo"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/tempo_editText"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textSize="14sp"
        android:imeOptions="actionGo"
        android:maxLines="1"
        app:layout_constraintRight_toLeftOf="@+id/btn_plus1"
        app:layout_constraintLeft_toRightOf="@+id/btn_less1"
        app:layout_constraintBottom_toBottomOf="@+id/btn_less1" />

    <ToggleButton
        android:id="@+id/togglebtn_REC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="ToggleButton"
        android:textOn="@string/str_recOn"
        android:textOff="@string/str_recOff"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_control"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btn_plus5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/str_plus5bpm"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_plus1"
        app:layout_constraintBottom_toBottomOf="@+id/btn_plus1" />

    <Button
        android:id="@+id/btn_plus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_plus1bpm"
        android:minHeight="0dp"
        android:minWidth="0dp"
        app:layout_constraintRight_toLeftOf="@+id/btn_plus5"
        app:layout_constraintLeft_toRightOf="@+id/tempo_editText"
        app:layout_constraintBottom_toBottomOf="@+id/tempo_editText" />

    <Button
        android:id="@+id/btn_less1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_less1bpm"
        android:minHeight="0dp"
        android:minWidth="0dp"
        app:layout_constraintRight_toLeftOf="@+id/tempo_editText"
        app:layout_constraintLeft_toRightOf="@+id/btn_less5"
        app:layout_constraintBottom_toBottomOf="@+id/btn_less5" />

    <Button
        android:id="@+id/btn_less5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_less5bpm"
        android:minHeight="0dp"
        android:minWidth="0dp"
        app:layout_constraintRight_toLeftOf="@+id/btn_less1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_tempo" />

</android.support.constraint.ConstraintLayout>